dataset1235/2025-2/2868285114/users/2884723940/executions/3649835072_2667036473.log
== SUBMISSION (2025-08-19 22:26:35)
-- CODE: 
celcius = float(input("Valor de Celcius"))
kelvin = celcius + 273,15
print ("conversão ", round(kelvin,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print ("conversão ", round(kelvin,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print ("conversão ", round(kelvin,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print ("conversão ", round(kelvin,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print ("conversão ", round(kelvin,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print ("conversão ", round(kelvin,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print ("conversão ", round(kelvin,2)
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:27:14)
-- CODE: 
celcius = float(input("Valor de Celcius"))
kelvin = celcius + 273.15
print ("conversão ", round(kelvin,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Valor de Celciusconversão  293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Valor de Celciusconversão  263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Valor de Celciusconversão  233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Valor de Celciusconversão  373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Valor de Celciusconversão  273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Valor de Celciusconversão  303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:26:51)
-- CODE: 
celcius = float(input("Valor de Celcius"))
kelvin = celcius + 273,15
print ("conversão ", round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:26:46)
-- CODE: 
celcius = float(input("Valor de Celcius"))
kelvin = celcius + 273,15
print ("conversão ", round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:26:42)
-- CODE: 
celcius = float(input("Valor de Celcius"))
kelvin = celcius + 273,15
print ("conversão ", round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 22:26:20)
-- CODE: 
celcius = float(input("Valor de Celcius"))
kelvin = celcius + 273,15
print ("conversao ", round(kelvin,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    print ("conversao ", round(kelvin,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    print ("conversao ", round(kelvin,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    print ("conversao ", round(kelvin,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    print ("conversao ", round(kelvin,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    print ("conversao ", round(kelvin,2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    print ("conversao ", round(kelvin,2)
          ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:26:44)
-- CODE: 
celcius = float(input("Valor de Celcius"))
kelvin = celcius + 273,15
print ("conversão ", round(kelvin,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print ("conversão ", round(kelvin,2))
                         ^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
